@@ -1,0 +1,33 @@
+requires "CHI" => "0.58";
+requires "Cache::FastMmap" => "1.40";
+requires "Class::Method::ModifiersX::Augment" => "0.001";
+requires "Class::Null" => "2.110730";
+requires "File::Path" => "2.08";
+requires "File::ReadBackwards" => "1.05";
+requires "Hash::Merge" => "0.200";
+requires "JSON::MaybeXS" => "1.002002";
+requires "Module::Pluggable" => "5.1";
+requires "Module::Runtime" => "0.014";
+requires "Moo" => "1.006";
+requires "MooX::ClassStash" => "0.005";
+requires "Try::Tiny" => "0.22";
+requires "Type::Tiny" => "1.000003";
+requires "Unexpected" => "v0.29.0";
+requires "namespace::autoclean" => "0.19";
+requires "namespace::clean" => "0.25";
+requires "perl" => "5.010001";
+
+on 'build' => sub {
+  requires "File::pushd" => "1.00";
+  requires "Module::Build" => "0.4004";
+  requires "Path::Tiny" => "0.013";
+  requires "Test::Deep" => "0.108";
+  requires "Test::Requires" => "0.06";
+  requires "Text::Diff" => "1.37";
+  requires "version" => "0.88";
+};
+
+on 'configure' => sub {
+  requires "Module::Build" => "0.4004";
+  requires "version" => "0.88";
+};
