@@ -50,18 +50,33 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/PJFL
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=File-DataClass
 bugtracker.mailto = bug-File-DataClass@rt.cpan.org
-;repository.url   = git://github.com/pjfl/p5-file-dataclass.git
-;repository.web   = http://github.com/pjfl/p5-file-dataclass
-;repository.type  = git
+repository.url    = git://github.com/pjfl/p5-file-dataclass.git
+repository.web    = http://github.com/pjfl/p5-file-dataclass
+repository.type   = git
+
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename          = README.md
+location          = root
+type              = markdown
+
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
+
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
+[CPANFile]
 [License]
 [MetaJSON]
 [MetaYAML]
